<resources>
    <string name="app_name">iLoveDevelopers</string>
    <string name="pick_a_job">Pick A Job </string>
    <string name="welcome">Welcome</string>
    <string name="are_you_already_registered">Are you already registered?</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or">OR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_a_country">Pick A Country\n</string>
    <string name="countries_italy">Italy</string>
    <string name="countries_france">France</string>
    <string name="countries_belgium">Belgium</string>
    <string name="countries_new_zeland">New Zeland</string>
    <string name="countries_united_states">United States</string>
    <string name="countries_switzerland">Switzerland</string>
    <string name="countries_germany">Germany</string>
    <string name="countries_spain">Spain</string>
    <string name="countries_netherlands">Netherlands</string>
    <string name="countries_canada">Canada</string>
    <string name="countries_australia">Australia</string>
    <string name="job_categories_it">IT</string>
    <string name="job_categories_hr">Human resource</string>
    <string name="job_categories_restaurant">Restaurant</string>
    <string name="job_categories_marketing">Marketing</string>
    <string name="job_categories_sales">Sales</string>
    <string name="preference">Preference</string>
    <string name="statistics">Statistics</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="error_message">error\n</string>
</resources>